--- a/deploy-wordpress.yml
+++ b/deploy-wordpress.yml
@@ -16,6 +16,9 @@ apiVersion: habitat.sh/v1beta1
 kind: Habitat
 metadata:
   name: wordpress-db
+  labels:
+    source: habitat-demo
+    app: wordpress-habitat
 customVersion: v1beta2
 spec:
   v1beta2:
@@ -30,6 +33,9 @@ apiVersion: habitat.sh/v1beta1
 kind: Habitat
 metadata:
   name: wordpress-app
+  labels:
+    source: habitat-demo
+    app: wordpress-habitat
 customVersion: v1beta2
 spec:
   v1beta2:
